unpackaged/main/default/objects/Issue_Risk_Threat__c/Issue_Risk_Threat__c.object-meta.xml
<CustomObject>
    <label>Issue Risk Threat</label>
    <nameField>
        <displayFormat>IRT-{MM}{YYYY}{0}</displayFormat>
        <label>Issue Risk Threat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues Risks Threats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>