unpackaged/main/default/objects/Issue_Risk_Threat__c/fields/Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Acquirer__c</fullName>
    <label>Acquirer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Issues_Risks_Threats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>