unpackaged/main/default/objects/Issue_Risk_Threat__c/fields/Current_Network_Growth_Plans__c.field-meta.xml
<CustomField>
    <fullName>Current_Network_Growth_Plans__c</fullName>
    <label>Current Network Growth Plans</label>
    <type>TextArea</type>
</CustomField>