unpackaged/main/default/objects/Issue_Risk_Threat__c/fields/Geographical_Expansion_Plans__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Expansion_Plans__c</fullName>
    <label>Geographical Expansion Plans</label>
    <type>TextArea</type>
</CustomField>