unpackaged/main/default/objects/Issue_Risk_Threat__c/fields/Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_Plan__c</fullName>
    <label>Mitigation Plan</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>