unpackaged/main/default/objects/Issue_Risk_Threat__c/fields/New_Channel_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>New_Channel_Opportunities__c</fullName>
    <label>New Channel Opportunities</label>
    <type>TextArea</type>
</CustomField>