unpackaged/main/default/objects/Issue_Risk_Threat__c/fields/New_Currency_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>New_Currency_Opportunities__c</fullName>
    <label>New Currency Opportunities</label>
    <type>TextArea</type>
</CustomField>