unpackaged/main/default/objects/Issue_Risk_Threat__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anticipated</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed - Mitigated</fullName>
            </value>
            <value>
                <fullName>Closed - Scope Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>