unpackaged/main/default/objects/Issue_Risk_Threat__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Threat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>